<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbig"
    tools:context=".LaunchActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="1dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="1dp">

        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/smallbackground"
            android:scaleType="fitCenter"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/whitelogo"
            android:paddingTop="50dp"
            android:paddingLeft="90dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_welcomeToApp"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="250dp"
            android:paddingRight="15dp"
            android:text="@string/text_slogan"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="100dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/btnLogIn"
                android:textSize="24dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/btnSignUp"
                android:textSize="24dp" />
        </LinearLayout>


    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

