<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orange"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewbackground"
        android:layout_width="721dp"
        android:layout_height="299dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background1" />

    <TextView
        android:id="@+id/textViewlogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/text_Login"
        android:textColor="#FF5A00"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewbackground" />

    <ImageView
        android:id="@+id/imageViewlogo"
        android:layout_width="217dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewbackground"
        app:srcCompat="@drawable/whitelogo" />

    <ImageView
        android:id="@+id/imageViewlogoName"
        android:layout_width="413dp"
        android:layout_height="83dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewlogo"
        app:srcCompat="@drawable/whitenameslogan" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/orange"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/hntEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewlogIn" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/orange"
        android:drawableStart="@android:drawable/ic_secure"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableEnd="@android:drawable/ic_menu_view"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/hntPassword"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/Login"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btnLogIn"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Not registered yet?"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an Account"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>